Closed
Bug 801405
Opened 13 years ago
Closed 13 years ago
crash in imgFrame::Optimize
Categories
(Core :: Graphics: ImageLib, defect)
Tracking
()
VERIFIED
FIXED
mozilla19
Tracking | Status | |
---|---|---|
firefox19 | - | --- |
People
(Reporter: scoobidiver, Assigned: jdm)
References
Details
(Keywords: crash, regression, Whiteboard: [native-crash])
Crash Data
Attachments
(1 file)
936 bytes,
patch
|
joe
:
review+
|
Details | Diff | Splinter Review |
It first appeared in 19.0a1/20121014. The regression range is:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=90857937b601&tochange=57304bbf9c0e
It might be a regression from bug 505385 or bug 799335.
Signature imgFrame::Optimize() More Reports Search
UUID 65b23ef1-4532-4677-8051-3ce2d2121014
Date Processed 2012-10-14 14:10:51
Uptime 769
Last Crash 4.2 weeks before submission
Install Age 12.8 minutes since version was first installed.
Install Time 2012-10-14 13:57:49
Product Firefox
Version 19.0a1
Build ID 20121014030627
Release Channel nightly
OS Windows NT
OS Version 6.1.7601 Service Pack 1
Build Architecture x86
Build Architecture Info GenuineIntel family 6 model 26 stepping 4
Crash Reason EXCEPTION_ACCESS_VIOLATION_READ
Crash Address 0x31000000
App Notes
AdapterVendorID: 0x10de, AdapterDeviceID: 0x06cd, AdapterSubsysID: 14703842, AdapterDriverVersion: 9.18.13.623
D2D? D2D+ DWrite? DWrite+ D3D10 Layers? D3D10 Layers+
EMCheckCompatibility False
Adapter Vendor ID 0x10de
Adapter Device ID 0x06cd
Total Virtual Memory 4294836224
Available Virtual Memory 3448782848
System Memory Use Percentage 42
Available Page File 14575284224
Available Physical Memory 5581369344
Accessibility Active
Frame Module Signature Source
0 xul.dll imgFrame::Optimize image/src/imgFrame.cpp:237
1 xul.dll mozilla::image::RasterImage::DecodingComplete image/src/RasterImage.cpp:1429
2 xul.dll mozilla::image::Decoder::Finish image/src/Decoder.cpp:123
3 xul.dll mozilla::image::RasterImage::ShutdownDecoder image/src/RasterImage.cpp:2426
4 xul.dll mozilla::image::RasterImage::~RasterImage image/src/RasterImage.cpp:279
5 xul.dll mozilla::image::RasterImage::`scalar deleting destructor'
6 xul.dll mozilla::image::RasterImage::Release image/src/RasterImage.cpp:206
7 xul.dll imgRequest::~imgRequest image/src/imgRequest.cpp:107
8 xul.dll imgRequest::`vector deleting destructor'
9 xul.dll imgRequest::Release image/src/imgRequest.cpp:78
10 xul.dll nsProgressNotificationProxy::Release image/src/imgLoader.cpp:278
11 xul.dll ReleaseSliceNow js/xpconnect/src/XPCJSRuntime.cpp:569
12 xul.dll XPCIncrementalReleaseRunnable::ReleaseNow js/xpconnect/src/XPCJSRuntime.cpp:627
13 xul.dll XPCIncrementalReleaseRunnable::Run js/xpconnect/src/XPCJSRuntime.cpp:658
14 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:612
...
More reports at:
https://crash-stats.mozilla.com/report/list?signature=imgFrame%3A%3AOptimize%28%29
Reporter | ||
Comment 1•13 years ago
|
||
It's #1 top crasher in today's build.
tracking-firefox19:
--- → ?
Keywords: topcrash
Comment 2•13 years ago
|
||
We are touching imgFrames after deleting them. This is obviously 100% wrong. However I am not entirely clear how we don't run into this without bug 505385. We surely do now, though.
Assignee: nobody → josh
Assignee | ||
Comment 3•13 years ago
|
||
I also cannot reproduce this one.
Attachment #671594 -
Flags: review?(joe)
Updated•13 years ago
|
Attachment #671594 -
Flags: review?(joe) → review+
Assignee | ||
Comment 4•13 years ago
|
||
Comment 5•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Comment 6•13 years ago
|
||
This has dropped significantly in the 1-day analysis: https://crash-stats.mozilla.com/topcrasher/by_build_date/Firefox/19.0a1/1/browser
Keywords: topcrash
Reporter | ||
Comment 7•13 years ago
|
||
(In reply to Alex Keybl [:akeybl] from comment #6)
> This has dropped significantly in the 1-day analysis:
For a newly fixed bug, it's not surprising.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•