Bug 801405 - Avoid attempting to optimize frames that no longer exist. r=joe